--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/style.css">
+        <script src="scripts/script.js" defer></script>
         <title>Project</title>
     </head>
     <body>
-        <div class="grid">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <section class="grid">
+            <div class="b-square cell" draggable="true"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+            <div class="cell" draggable="false"></div>
+        </section>
     </body>
 </html>
