--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     </head>
     <body>
         <section class="grid">
-            <div class="b-square cell" draggable="true"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
-            <div class="cell" draggable="false"></div>
+            <div class="b-square cell" draggable="true" id="1"></div>
+            <div class="cell" draggable="false" id="2"></div>
+            <div class="cell" draggable="false" id="3"></div>
+            <div class="cell" draggable="false" id="5"></div>
+            <div class="cell" draggable="false" id="6"></div>
+            <div class="cell" draggable="false" id="7"></div>
+            <div class="cell" draggable="false" id="9"></div>
+            <div class="cell" draggable="false" id="10"></div>
+            <div class="cell" draggable="false" id="11"></div>
         </section>
     </body>
 </html>
