--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <body>
         <section class="grid">
             <div class="b-square cell" draggable="true" id="1"></div>
-            <div class="cell" draggable="false" id="2"></div>
+            <div class="circle cell" draggable="false" id="2"></div>
             <div class="cell" draggable="false" id="3"></div>
             <div class="cell" draggable="false" id="5"></div>
-            <div class="cell" draggable="false" id="6"></div>
+            <div class="r-square cell dropped" draggable="false" id="6"></div>
             <div class="cell" draggable="false" id="7"></div>
             <div class="cell" draggable="false" id="9"></div>
             <div class="cell" draggable="false" id="10"></div>
