--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
         <title>Project</title>
     </head>
     <body>
+
         <section class="grid">
-            <div class="b-square cell" draggable="true" id="1"></div>
-            <div class="circle cell" draggable="false" id="2"></div>
-            <div class="cell" draggable="false" id="3"></div>
-            <div class="cell" draggable="false" id="5"></div>
-            <div class="r-square cell dropped" draggable="false" id="6"></div>
-            <div class="cell" draggable="false" id="7"></div>
-            <div class="cell" draggable="false" id="9"></div>
-            <div class="cell" draggable="false" id="10"></div>
-            <div class="cell" draggable="false" id="11"></div>
+
+            <div class="b-square cell" draggable="true" id="1"> <img src="images/box.jpg" alt="" class="image"> </div>
+            <div class="cell air" id="2"></div>
+            <div class="cell air" id="3"></div>
+            <div class="cell" id="5"></div>
+            <div class="r-square cell dropped" id="6"></div>
+            <div class="char cell" draggable="true" id="7"></div>
+            <div class="cell" id="9"></div>
+            <div class="cell" id="10"></div>
+            <div class="cell" id="11"></div>
+
         </section>
+
     </body>
 </html>
