--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="char cell" draggable="true" id="7"></div>
             <div class="cell" id="9"></div>
             <div class="cell" id="10"></div>
-            <div class="cell" id="11"></div>
+            <div class="flag cell" id="11"></div>
 
         </section>
 
