--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <section class="grid">
 
             <div class="b-square cell" draggable="true" id="1"> <img src="images/box.jpg" alt="" class="image"> </div>
-            <div class="cell air" id="2"></div>
-            <div class="cell air" id="3"></div>
+            <div class="cell" id="2"></div>
+            <div class="cell" id="3"></div>
             <div class="cell" id="5"></div>
             <div class="r-square cell dropped" id="6"></div>
-            <div class="char cell" draggable="true" id="7"></div>
+            <div class="cell" draggable="true" id="7"></div>
             <div class="cell" id="9"></div>
-            <div class="cell" id="10"></div>
+            <div class="char cell" id="10"></div>
             <div class="cell" id="11"></div>
 
         </section>
