--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
         <section class="grid">
 
-            <div class="b-square cell" draggable="true" id="1"> <img src="images/box.jpg" alt="" class="image"> </div>
-            <div class="cell" id="2"></div>
+            <div class="char cell" id="1">  </div>
+            <div class="b-square cell" draggable="true" id="2"><img src="images/box.jpg" alt="" class="image"></div>
             <div class="cell" id="3"></div>
-            <div class="cell" id="5"></div>
+            <div class="r-square cell" id="5"></div>
             <div class="r-square cell dropped" id="6"></div>
             <div class="cell" draggable="true" id="7"></div>
             <div class="cell" id="9"></div>
-            <div class="char cell" id="10"></div>
-            <div class="cell" id="11"></div>
+            <div class="b-square cell" draggable="true" id="10"><img src="images/box.jpg" alt="" class="image"></div>
+            <div class="flag cell" id="11"></div>
 
         </section>
 
