--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Project</title>
     </head>
     <body>
-        <section class="grid" id="section">
+        <section class="grid-3" id="section">
 
         </section>
 
