--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         <title>Project</title>
     </head>
     <body>
-        <section class="grid-3" id="section">
-
-        </section>
+        <section class="grid-4" id="section"></section>
 
     </body>
 </html>
