--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-        <section class="grid-4" id="section"></section>
+        <section class="" id="section"></section>
 
     </body>
 </html>
