--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         <title>Project</title>
     </head>
     <body>
-
-
-
+    <button onclick="loadMap()">Play</button>
         <section class="" id="section"></section>
 
     </body>
