--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" type="image/x-icon" href="/images/char.png">
         <script src="scripts/script.js" defer></script>
-        <title>Project</title>
+        <title>RoBOX</title>
     </head>
     <body>
+        <h1>RoBOX</h1>
         <section class="" id="section"></section>
     </body>
 </html>
