--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <body>
         <h1>RoBOX</h1>
         <section class="" id="section"></section>
+        <img src="images/controls.png" alt="Controls" id="controls">
     </body>
 </html>
