--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="theme-color" content="#e4dcd1">
+
         <link rel="apple-touch-icon" href="images/char.png" />
-        <meta name="description" content="Web game with drag&drop">
-        <script src="https://unpkg.com/shake-detector"></script>
-        <script type="text/javascript" src="https://cdn.rawgit.com/alexgibson/shake.js/master/shake.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" type="image/x-icon" href="/images/char.png">
+        <link rel="manifest" href="/manifest.json">
+
+        <script src="https://unpkg.com/shake-detector"></script>
+        <script type="text/javascript" src="https://cdn.rawgit.com/alexgibson/shake.js/master/shake.js"></script>
         <script src="scripts/script.js" defer></script>
+
         <title>RoBOX</title>
     </head>
+
     <body>
         <h1>RoBOX</h1>
         <section class="" id="section"></section>
