--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" type="image/x-icon" href="/images/char.png">
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
 
         <script src="https://unpkg.com/shake-detector"></script>
         <script type="text/javascript" src="https://cdn.rawgit.com/alexgibson/shake.js/master/shake.js"></script>
