--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <body>
         <h1>RoBOX</h1>
         <section class="" id="section"></section>
-        <img width="336" height="200" src="images/controls.png" alt="Controls" id="controls">
-        <img width="200" height="250" src="images/hint1.PNG" id="hint">
+        <img width="336" height="200" src="images/controls.png" alt="Controls" id="hint">
+
         <script src="scripts/script.js" ></script>
         <script src="scripts/app.js" ></script>
     </body>
