--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="theme-color" content="#e4dcd1">
+        <meta name="description" content="A website for a drag&drop game">
+
         <link rel="apple-touch-icon" href="images/char.png" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="icon" type="image/x-icon" href="/images/char.png">
         <link rel="manifest" href="manifest.json">
+
         <script src="https://unpkg.com/shake-detector"></script>
         <script type="text/javascript" src="https://cdn.rawgit.com/alexgibson/shake.js/master/shake.js"></script>
+        <script src="scripts/script.js" defer></script>
+        <script src="scripts/app.js" defer></script>
 
         <title>RoBOX</title>
     </head>
@@ -19,9 +24,6 @@
     <body>
         <h1>RoBOX</h1>
         <section class="" id="section"></section>
-        <img width="336" height="200" src="images/controls.png" alt="Controls" id="hint">
-
-        <script src="scripts/script.js" ></script>
-        <script src="scripts/app.js" ></script>
+        <img width="500" height="250" src="images/controls.png" alt="Controls" id="hint">
     </body>
 </html>
